2007-10-16  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Asttools
        * mini makefile fix

        CFG
        * use regular tree layout with dot_graph

        Olmar
        * new program gen_graph to generate the ast_graph program for
          generating the object graph of an ast 
        * changed the node order tree traversal array generated in
          into_array to normal depth-first descending order
        * sourceLoc accessors generated (including superast)
        * new program ast_type_graph to generate a type graph from an ast
          description 
        * added color section to reflection control files
        * node id's start with 0 now
        * new dot_graph module in olmar/util to force regular tree layout
          for dot generated graphs
        * fixed some small problems
        
        * started extensions for elsa ast
          - new build dir olmar/build/elsa
          - new types AT_ref, AT_option for the ml_ast; none of the meta
            ast programs has been adopted yet

2007-09-24  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * moved more_string, dense_set into new util subdir

        * added .cvsignore
        * gen_reflection: change to alloc_small
        * gen_uplinks added

        * started olmar version 2 development in subdir olmar
          - lives in parallel and harmony with the current olmar
            version
          - old version will be discontinued at some stage in the far
            future 
          - main differences:
            + astgen ast's are reflected into ocaml
            + reflection code generation is done in ocaml
            + reflection is controled by a config file (containing for
              instance renamings)
            + will work (eventually) with almost unchanged elsa sources
            + record types instead of tuples
            + most of the tedious code is generated as well
              (ast_accessors, superast, uplinks, ast_graph, ...)
