@@ -17,7 +17,8 @@ verbatim {
     FF_NULLABLE = 0x02,		// nullable modifier present
     FF_FIELD    = 0x04,		// field modifier present
     FF_XML      = 0x08,		// some xml.* modifier present
-    FF_PRIVAT   = 0x10		// private, use accessor function
+    FF_PRIVAT   = 0x10,		// private, use accessor function
+    FF_CIRCULAR = 0x20		// possibly circurlar pointer
   };
 }
 
@@ -202,6 +203,7 @@ void ASTClass::init_fields()
 	static_cast<FieldFlags>(xml_or_field
 		     | (ud->amod->hasMod("owner") ? FF_IS_OWNER : FF_NONE)
 		     | (ud->amod->hasMod("nullable") ? FF_NULLABLE : FF_NONE)
+		     | (ud->amod->hasMod("circular") ? FF_CIRCULAR : FF_NONE)
 		     | (ud->amod->acc == AC_PRIVATE ? FF_PRIVAT : FF_NONE)),
 	extractFieldType(ud->code),
 	extractFieldName(ud->code),
